Fix extra padding on size 1 & 2 image asset titles

--- a/styles/main.less
+++ b/styles/main.less
@@ -127,7 +127,7 @@ h2, h3 {
   padding-top: @baseline * 0.5;
 }
 
-.asset-type-text, .asset-type-documentgroup, .asset-type-embedgroup.asset-size-1, .asset-type-embedgroup.asset-size-2 {
+.asset-type-text, .asset-type-documentgroup, .asset-type-imagegroup.asset-size-1, .asset-type-imagegroup.asset-size-2, .asset-type-embedgroup.asset-size-1, .asset-type-embedgroup.asset-size-2 {
   .asset-title {
     padding-top: 0;
   }
